# PyKernelPatch

./: .gitignore  LICENSE  Pipfile  README.md  TODO.txt  fuzzy_patcher_clean  pyproject.toml  tool
kernelpatch/: __main__.py  config.py  const.py  diff.py  errors.py  file.py  find.py  finder.py  instructions.py  json.py  kplist.py  macho.py  patch.py  patcher.py  patterns.py  utils.py
src/: __main__.py  file.py  find.py  patch.py  patterns.py
