[tool.poetry]
name = "pykernelpatch"
version = "1.1.5"
description = "iOS kernelcache patcher"
authors = ["Merculous <24739823+Merculous@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "kernelpatch"}]
repository = "https://github.com/Merculous/PyKernelPatch"


[tool.poetry.dependencies]
python = "^3.11"
armfind = {git = "https://github.com/Merculous/PyARMFind.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
